--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.11.1
 requests==2.28.0
 Django==4.0.5
-djangorestframework
+djangorestframework==3.13.1
 PyMySQL==1.0.2
+cryptography==37.0.2
