--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,22 @@ version: "3.9"
 services: 
   db: 
     image: mysql:8.0.30
+    command: mysqld --default-authentication-plugin=mysql_native_password
     ports:
-      - ${MYSQL_HOST_PORT}:3306
+      - 3307:3306
     volumes:
       - mysql:/var/lib/mysql/
     environment:
       - MYSQL_DATABASE=vnexpress
       - MYSQL_PASSWORD=deathless
       - MYSQL_ROOT_PASSWORD=deathless
-      - MYSQL_HOST='172.30.0.3'
+      - MYSQL_HOST=db
       - MYSQL_USER=root1
-    # healthcheck:
-    #   test: ["CMD", "mysqladmin", "ping", "-p${MYSQL_DB_PASSWORD}"]
-    #   interval: 10s
-    #   timeout: 10s
-    #   retries: 5
+    healthcheck:
+      test: mysql vnexpress --user=root1 --password=deathless --silent --execute "show databases;"
+      interval: 10s
+      timeout: 10s
+      retries: 5
   
   # redis:
   #   image: "redis:alpine"
@@ -50,7 +51,7 @@ services:
     container_name: django
     command: python3 manage.py runserver
     ports:
-      - ${DJANGO_HOST_PORT}:8000
+      - 8000:8000
     env_file:
       - .env
     volumes:
@@ -61,10 +62,10 @@ services:
       - MYSQL_ROOT_PASSWORD=deathless
       - MYSQL_USER=root1
     depends_on:
-      - db
+      # - db
       # - migrate
-      # db:
-      #   condition: service_healthy
+      db:
+        condition: service_healthy
 
 volumes:
   mysql: 
