--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ articlescraper/__pycache__
 
 djangoscraper/__pycache__/
 /__pycache__
+/authenticator/__pycache__
+authenticator/migrations/__pycache__/__init__.cpython-310.pyc
+authenticator/migrations/__pycache__/0001_initial.cpython-310.pyc
+authenticator/migrations/__pycache__/0002_rename_uid_tokenblacklist_id_and_more.cpython-310.pyc
+.env
+
+
+*/migrations/__pycache__
