--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,40 +3,41 @@ version: "3.9"
 services: 
   db: 
     image: mysql:8.0.30
-    command: mysqld --default-authentication-plugin=mysql_native_password
     ports:
       - 3307:3306
     volumes:
       - mysql:/var/lib/mysql/
+    env_file:
+      - .env
     environment:
-      - MYSQL_DATABASE=vnexpress
-      - MYSQL_PASSWORD=deathless
-      - MYSQL_ROOT_PASSWORD=deathless
-      - MYSQL_HOST=db
-      - MYSQL_USER=root1
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_USER=${MYSQL_USER}
     healthcheck:
-      test: mysql vnexpress --user=root1 --password=deathless --silent --execute "show databases;"
+      test: mysql ${MYSQL_DATABASE} --user=${MYSQL_USER} --password=${MYSQL_PASSWORD} --silent --execute "show databases;"
       interval: 10s
       timeout: 10s
       retries: 5
   
-  # redis:
-  #   image: "redis:alpine"
-  #   ports:
-  #     - "${REDIS_HOST_PORT}:6379"
-  #   environment:
-  #     - REDIS_PASSWORD=${REDIS_PASSWORD}
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "${REDIS_HOST_PORT}:6379"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
   
-  # celery:
-  #   build: .
-  #   command: celery -A djangoscraper.celery worker -l INFO
-  #   volumes:
-  #     - .:/app
-  #   depends_on:
-  #     django:
-  #       condition: service_started
-  #     redis:
-  #       condition: service_started
+  celery:
+    build: .
+    command: celery -A djangoscraper.celery worker -l INFO
+    volumes:
+      - .:/app
+    depends_on:
+      django:
+        condition: service_started
+      redis:
+        condition: service_started
 
   # migrate:
   #   build: .
@@ -49,23 +50,19 @@ services:
   django:
     build: .
     container_name: django
-    command: python3 manage.py runserver
+    command: python3 manage.py runserver 0.0.0.0:8000
     ports:
-      - 8000:8000
+      - ${DJANGO_HOST_PORT}:8000
     env_file:
       - .env
     volumes:
       - .:/app
-    environment:
-      - MYSQL_DATABASE=vnexpress
-      - MYSQL_PASSWORD=deathless
-      - MYSQL_ROOT_PASSWORD=deathless
-      - MYSQL_USER=root1
     depends_on:
-      # - db
-      # - migrate
       db:
         condition: service_healthy
+      redis:
+        condition: service_started
+    tty: true
 
 volumes:
   mysql: 
