--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,9 @@ cython_debug/
 
 #vscode json
 .vscode/
+.idea/.gitignore
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/web-scraper.iml
+.idea/inspectionProfiles/profiles_settings.xml
