--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db: 
     image: mysql:8.0.30
     ports:
-      - 3307:3306
+      - "${MYSQL_HOST_PORT}:3306"
     volumes:
       - mysql:/var/lib/mysql/
     env_file:
